# bridgewatch-ai-claude-ds

./: .gitignore  README.md  deploy.md  start-backend.bat  start-dev.bat  start-docker.bat  start-frontend.bat  任务导入说明.md  使用指南.md  开发需求.txt  桥梁与隧道重大风险智能识别_PRD.md  研发任务拆解表.md  要件描述.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: alerts.py  audit.py  auth.py  dashboard.py  dicts.py  events.py  health.py  ingestion.py  monitoring.py  objects.py  router.py  tasks.py  topics.py  users.py  videos.py
backend/app/engine/: __init__.py  batch.py  detector.py  models.py  simulation.py  worker.py
backend/app/ingestion/: cli.py  connectors.py  pipeline.py
backend/app/middleware/: auth.py  logging_mw.py  prometheus_mw.py
backend/app/models/: __init__.py  alert_record.py  event_record.py  fusion_result.py  inference_task.py  model_version.py  monitoring_data.py  object_info.py  system_log.py  user.py  video_info.py
backend/app/monitoring/: metrics.py
backend/app/schemas/: __init__.py  alerts.py  auth.py  common.py  dashboard.py  dicts.py  events.py  monitoring.py  objects.py  tasks.py  topics.py  users.py  videos.py
backend/app/seed/: __init__.py  __main__.py  seed_data.py
backend/app/services/: __init__.py  alert_service.py  audit_service.py  auth_service.py  dashboard_service.py  dict_service.py  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_events.py  test_health.py
(+91 files in other folders)
